# xtrllm

./: .gitattributes  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
advancedusage/: index.html
assets/: LICENSE
docs/: advancedusage.md  index.md  quickstart.md
docs/stylesheets/: extra.css  overrides.css
docs/tools/: eulexdb.md  uot25rev.md
quickstart/: index.html
search/: search_index.json
src/xtrllm/: __init__.py  df_extractor.py  extractor.py  loader.py
src/xtrllm/clients/: __init__.py  llm.py
src/xtrllm/core/: __init__.py  base.py  constants.py  engine.py  registry.py
src/xtrllm/io/: __init__.py  yaml.py
src/xtrllm/tasks/eulexdb/: classify_actor.py  extract_lgts_llm.py  extract_obs_llm.py
src/xtrllm/tasks/test/: entities.py
src/xtrllm/tasks/uio26fil/: eu_primary_law.py
src/xtrllm/tasks/uot25rev/: extract_authors_affiliations.py  valence_for_entities.py
src/xtrllm/throttlers/: __init__.py  adaptive.py  base.py  fixed.py  rpm.py
stylesheets/: extra.css  overrides.css
tools/eulexdb/: index.html
tools/uot25rev/: index.html
